feat: implement apology management system and add global exception handling